# Grep

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  build.sh
include/: atomic_stack.h  grep.h  path_validator.h  validator.h
src/: grep.cpp  main.cpp
tests/: grepTests.cpp
